--- a/BaseballLeague/BaseballLeague.MVC/Views/Team/Index.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Team/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model BaseballLeague.MVC.Models.TeamsViewModel
+﻿@using BaseballLeague.Models
+@model BaseballLeague.MVC.Models.TeamsViewModel
 
 @{
     ViewBag.Title = "Index";
@@ -7,9 +8,6 @@
 
 <h3>Teams</h3>
 <br/>
-<div>
-    <button class="btn btn-primary" id="NewTeam">New Team</button>
-</div>
 <div>
     <select class="form-control col-lg-offset-9 col-lg-4" id="select">
         <option value="All">All</option>
@@ -29,7 +27,7 @@
         <th>Roster</th>
     </tr>
     </thead>
-    <tbody class="searchable">
+    <tbody class="searchable" id="teamsTable">
     @if (Model.Teams.Any())
     {
         foreach (var m in Model.Teams)
@@ -39,13 +37,15 @@
                  <td>@m.TeamName</td>
                  <td>@m.ManagerName</td>
                  <td>@m.LeagueName</td>
-                 <td><a href="/Team/ViewRoster?TeamID=@m.TeamID">View Roster</a></td>
+                 <td><a href="/Team/PlayersOnTeam?TeamID=@m.TeamID">View Roster</a></td>
              </tr>
          }
     }
     </tbody>
 </table>
 
+@{ Html.RenderAction("_AddTeamModal", "Team");}
+
 @section Scripts{
-    <script type="text/javascript" src="~/Scripts/app/SearchBar.js"></script>
+    <script type="text/javascript" src="~/Scripts/app/addTeam.js"></script>
 }
