--- a/BaseballLeague/BaseballLeague.MVC/Views/Player/Index.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Player/Index.cshtml
@@ -6,11 +6,26 @@
 
 <h2>Players</h2>
 
+<div class="form-group">
+    <div class="col-lg-2">
+        @{ Html.RenderAction("_AddPlayerModal", "Player"); }
+    </div>
+</div>
+
+<div>
+    <select class="form-control col-lg-offset-9 col-lg-4" title="Select a Team" id="select">
+        <option value="All">All</option>
+        @foreach (var l in Model.TeamsDropdown)
+        {
+            <option value=@l.Value>@l.Text</option>
+        }
+    </select>
+</div>
+
 <table class="table table-striped table-hover">
     <thead>
     <tr>
-        <th>First Name</th>
-        <th>Last Name</th>
+        <th>Name</th>
         <th>Number</th>
         <th>Team</th>
         <th>Previous Batting Average</th>
@@ -20,33 +35,19 @@
     </tr>
     </thead>
     <tbody class="searchable">
-    <tr>
         @foreach (var p in Model.Players)
         {
-            <td>@p.FirstName</td>
-            <td>@p.LastName</td>
+            <tr>
+            <td>@p.Name</td>
             <td>@p.JerseyNumber</td>
             <td>@p.TeamID</td>
             <td>@p.LastYearBA</td>
+            <td>@p.YearsPlayed</td>
             <td>@p.PrimaryPosition</td>
-            <td>@p.SecondaryPosition</td>
+            <td>@p.SecondaryPosition</td></tr>
         }
-    </tr>
     </tbody>
 </table>
-
-@*<div class="form-group">
-    <div class="col-lg-2 col-lg-offset-2">
-        @Html.Partial("_AddPlayerModal")
-    </div>
-</div>*@
-
-<div class="form-group">
-    <label for="inputMPAARating" class="col-lg-2 control-label">MPAA Rating</label>
-    <div class="col-lg-6">
-        @Html.DropDownList("Teams", Model[0], "(select)", new { @class = "form-control input-sm", @id = "inputMPAARating", @name = "MPAARatings" })
-    </div>
-</div>
 
 @section Scripts
 {
