Added trade player and release player feature

--- a/BaseballLeague/BaseballLeague.MVC/Views/Team/Index.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Team/Index.cshtml
@@ -37,7 +37,7 @@
                  <td>@m.TeamName</td>
                  <td>@m.ManagerName</td>
                  <td>@m.LeagueName</td>
-                 <td><a href="/Team/PlayersOnTeam?TeamID=@m.TeamID">View Roster</a></td>
+                 <td><a href="/Team/PlayersOnTeam?TeamID=@m.TeamID&TeamName=@m.TeamName">View Roster</a></td>
              </tr>
          }
     }
