--- a/BaseballLeague/BaseballLeague.MVC/Views/Player/Index.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Player/Index.cshtml
@@ -14,7 +14,7 @@
 
 <div>
     <select class="form-control col-lg-offset-9 col-lg-4" title="Select a Team" id="team-select">
-        @*<option value="All">All</option>*@
+        <option value="All">All</option>
         @foreach (var l in Model.TeamsDropdown)
         {
             <option value=@l.Value>@l.Text</option>
