Fix league filter and stored proc.

--- a/BaseballLeague/BaseballLeague.MVC/Views/Shared/_SignFreeAgentModal.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Shared/_SignFreeAgentModal.cshtml
@@ -28,8 +28,8 @@
                             @foreach (var m in Model.FreeAgents)
                             {
                                 <tr>
-                                    <td>@m.TeamID</td>
                                     <td>@m.Name</td>
+                                    <td>@m.JerseyNumber</td>
                                     <td>@m.LastYearBA</td>
                                     <td>@m.PrimaryPosition</td>
                                     <td>@m.SecondaryPosition</td>
