Fixed Roster display with numbers column

--- a/BaseballLeague/BaseballLeague.MVC/Views/Team/Index.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Team/Index.cshtml
@@ -7,7 +7,9 @@
 
 
 <h3>Teams</h3>
-<br/>
+
+<button class="btn btn-primary" id="btnShowAddTeam">Add Team</button>
+
 <div>
     <select class="form-control col-lg-offset-9 col-lg-4" id="selectLeague">
         <option value="All">All</option>
