--- a/BaseballLeague/BaseballLeague.MVC/Views/Shared/_TradePlayerModal.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Shared/_TradePlayerModal.cshtml
@@ -13,7 +13,7 @@
                 <div class="row">
                     <div class="col-xs-6">
                         <div class="form-group">
-                            <input type="hidden" id="tradePlayedID"/>
+                            <input type="hidden" id="tradePlayerID"/>
                             <label>Team Name</label>
                             <select class="form-control col-lg-4" id="tradeTeamID">
                                 @foreach (var m in Model.Teams)
