Implemented the trade feature with ajax and redrawing the table. Still need to update the Team name after the trade.

--- a/BaseballLeague/BaseballLeague.MVC/Views/Team/PlayersOnTeam.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Team/PlayersOnTeam.cshtml
@@ -8,7 +8,7 @@
 <button class="btn btn-primary col-lg-offset-10" id="btnShowSignFreeAgent">Sign Free Agent</button>
 
 <div class="container">
-    <table class="table">
+    <table class="table" id="table">
         <thead>
         <tr>
             <th>#</th>
