--- a/BaseballLeague/BaseballLeague.MVC/Views/Shared/_TradePlayerModal.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Shared/_TradePlayerModal.cshtml
@@ -10,6 +10,7 @@
                 <h4 class="modal-title" id="myModalLabel">Trade Player</h4>
             </div>
             <div class="modal-body">
+                <h1 class ="playerName"></h1>
                 <div class="row">
                     <div class="col-xs-6">
                         <div class="form-group">
