--- a/BaseballLeague/BaseballLeague.MVC/Views/Shared/_TradePlayerModal.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Shared/_TradePlayerModal.cshtml
@@ -15,6 +15,7 @@
                     <div class="col-xs-6">
                         <div class="form-group">
                             <input type="hidden" id="tradePlayerID"/>
+                            <input type="hidden" id="currentTeamIDModal" />
                             <label>Team Name</label>
                             <select class="form-control col-lg-4" id="tradeTeamID">
                                 @foreach (var m in Model.Teams)
