--- a/BaseballLeague/BaseballLeague.MVC/Views/Team/PlayersOnTeam.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Team/PlayersOnTeam.cshtml
@@ -6,7 +6,7 @@
 <h2>@Model.TeamName's Roster</h2>
 
 <button class="btn btn-primary col-lg-offset-10" id="btnShowSignFreeAgent">Sign Free Agent</button>
-
+<input type="hidden" value=@Model.TeamID id="currentTeamID"/>
 <div class="container">
     <table class="table" id="table">
         <thead>
