added hideseek search bar to SignFreeAgent modal

--- a/BaseballLeague/BaseballLeague.MVC/Views/Team/PlayersOnTeam.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Team/PlayersOnTeam.cshtml
@@ -46,4 +46,6 @@
 
 @section Scripts{
     <script type="text/javascript" src="~/Scripts/app/viewRoster.js"></script>
+    <script type="text/javascript" src="~/Scripts/app/SearchBar.js"></script>
+    <script type="text/javascript" src="~/Scripts/jquery.hideseek.min.js"></script>
 }
