--- a/BaseballLeague/BaseballLeague.MVC/Views/Shared/_SignFreeAgentModal.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Shared/_SignFreeAgentModal.cshtml
@@ -11,6 +11,7 @@
                 <h4 class="modal-title" id="myModalLabel">Sign Free Agent to @Model.TeamName</h4>
             </div>
             <div class="modal-body">
+                <input type="text" class="input-sm" placeholder="search" name="search-nodata" id="search-nodata" data-list=".searchable" autocomplete="on">
                 <table class="table table-striped table-hover">
                     <thead>
                     <tr>
@@ -22,7 +23,7 @@
                         <th>Years Played</th>
                     </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="searchable">
                     @foreach (var m in Model.FreeAgents)
                     {
                         <tr>
