added release player ajax

--- a/BaseballLeague/BaseballLeague.MVC/Views/Shared/_ReleasePlayerModal.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Shared/_ReleasePlayerModal.cshtml
@@ -12,7 +12,8 @@
                 <div class="row">
                     <div class="col-xs-6">
                         <div class="form-group">
-                            <input type="hidden" id="releasePlayerID" />
+                            <input type="hidden" id="releasePlayerID"/>
+                            <input type="hidden" id="#releasePlayerTeamID"/>
                             <label>Team Name</label>
                         </div>
                     </div>
