loadtable will now rebuild table after releasing and signing a free agent

--- a/BaseballLeague/BaseballLeague.MVC/Views/Team/PlayersOnTeam.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Team/PlayersOnTeam.cshtml
@@ -20,7 +20,7 @@
             <th>Years Played</th>
         </tr>
         </thead>
-        <tbody>
+        <tbody id="teamRoster">
         @foreach (var p in Model.Players)
         {
             <tr>
