--- a/BaseballLeague/BaseballLeague.MVC/Views/Shared/_SignFreeAgentModal.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Shared/_SignFreeAgentModal.cshtml
@@ -23,7 +23,10 @@
                         <th>Years Played</th>
                     </tr>
                     </thead>
-                    <tbody class="searchable">
+                    <tbody class="searchable" id="freeAgentModalTBody">
+                    
+                    </tbody>
+                    @*<tbody class="searchable">
                     @foreach (var m in Model.FreeAgents)
                     {
                         <tr>
@@ -36,7 +39,7 @@
                             <td><input type="button" value="Sign" class="btn btn-xs" onclick="signFreeAgent(@Model.TeamID, @m.PlayerID) "></td>
                         </tr>
                     }
-                    </tbody>
+                    </tbody>*@
                 </table>
                 <div class="modal-footer">
                     <button class="btn btn-default" data-dismiss="modal">Cancel</button>
