--- a/BaseballLeague/BaseballLeague.MVC/Views/Team/PlayersOnTeam.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Team/PlayersOnTeam.cshtml
@@ -40,7 +40,35 @@
 </div>
 
 @{ Html.RenderAction("_TradePlayerModal", "Team");}
-@Html.Partial("_ReleasePlayerModal");
+@*@Html.Partial("_ReleasePlayerModal");*@
+<!-- Release Player Modal-->
+<div class="modal fade" id="releasePlayerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title" id="myModalLabel">Release Player</h4>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-xs-6">
+                        <div class="form-group">
+                            <input type="hidden" id="releasePlayerID" />
+                            <input type="hidden" id="#releasePlayerTeamID" />
+                            <label>Team Name</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button class="btn btn-primary" id="btnRelease">Release</button>
+            </div>
+        </div>
+    </div>
+</div>`
 @{ Html.RenderAction("_SignFreeAgentModal", "Team", new {TeamID = @Model.TeamID, TeamName = @Model.TeamName});}
 
 
