--- a/BaseballLeague/BaseballLeague.MVC/Views/Team/PlayersOnTeam.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Team/PlayersOnTeam.cshtml
@@ -40,7 +40,7 @@
 </div>
 
 @{ Html.RenderAction("_TradePlayerModal", "Team");}
-@*@Html.Partial("_ReleasePlayerModal");*@
+
 <!-- Release Player Modal-->
 <div class="modal fade" id="releasePlayerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -69,8 +69,42 @@
         </div>
     </div>
 </div>`
-@{ Html.RenderAction("_SignFreeAgentModal", "Team", new {TeamID = @Model.TeamID, TeamName = @Model.TeamName});}
+@*@{ Html.RenderAction("_SignFreeAgentModal", "Team", new {TeamID = @Model.TeamID, TeamName = @Model.TeamName});}*@
 
+<!-- Sign Free Agent Modal -->
+<div class="modal fade" id="signFreeAgentModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title" id="myModalLabel">Sign Free Agent to @Model.TeamName</h4>
+            </div>
+            <div class="modal-body">
+                <input type="text" class="input-sm" placeholder="search" name="search-nodata" id="search-nodata" data-list=".searchable" autocomplete="on">
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Jersey Number</th>
+                            <th>Last Year's Batting Avg.</th>
+                            <th>Main Position</th>
+                            <th>Secondary Position</th>
+                            <th>Years Played</th>
+                        </tr>
+                    </thead>
+                    <tbody class="searchable" id="freeAgentModalTBody">
+                    
+                    </tbody>
+                </table>
+                <div class="modal-footer">
+                    <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 @section Scripts{
     <script type="text/javascript" src="~/Scripts/app/viewRoster.js"></script>
