--- a/BaseballLeague/BaseballLeague.MVC/Views/Shared/_ReleasePlayerModal.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Shared/_ReleasePlayerModal.cshtml
@@ -1,5 +1,4 @@
-﻿
-<div class="modal fade" id="releasePlayerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+﻿<div class="modal fade" id="releasePlayerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -12,8 +11,7 @@
                 <div class="row">
                     <div class="col-xs-6">
                         <div class="form-group">
-                            <input type="hidden" id="releasePlayerID"/>
-                            <input type="hidden" id="#releasePlayerTeamID"/>
+                            <input type="hidden" id="releasePlayerID" />
                             <label>Team Name</label>
                         </div>
                     </div>
