--- a/BaseballLeague/BaseballLeague.MVC/Views/Shared/_SignFreeAgentModal.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Shared/_SignFreeAgentModal.cshtml
@@ -1,7 +1,4 @@
-﻿@model BaseballLeague.MVC.Models.SignFreeAgentViewModel
-
-<!-- Modal -->
-<div class="modal fade" id="signFreeAgentModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+﻿<div class="modal fade" id="signFreeAgentModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -14,32 +11,16 @@
                 <input type="text" class="input-sm" placeholder="search" name="search-nodata" id="search-nodata" data-list=".searchable" autocomplete="on">
                 <table class="table table-striped table-hover">
                     <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Jersey Number</th>
-                        <th>Last Year's Batting Avg.</th>
-                        <th>Main Position</th>
-                        <th>Secondary Position</th>
-                        <th>Years Played</th>
-                    </tr>
-                    </thead>
-                    <tbody class="searchable" id="freeAgentModalTBody">
-                    
-                    </tbody>
-                    @*<tbody class="searchable">
-                    @foreach (var m in Model.FreeAgents)
-                    {
                         <tr>
-                            <td>@m.Name</td>
-                            <td>@m.JerseyNumber</td>
-                            <td>@m.LastYearBA</td>
-                            <td>@m.PrimaryPosition</td>
-                            <td>@m.SecondaryPosition</td>
-                            <td>@m.YearsPlayed</td>
-                            <td><input type="button" value="Sign" class="btn btn-xs" onclick="signFreeAgent(@Model.TeamID, @m.PlayerID) "></td>
+                            <th>Name</th>
+                            <th>Jersey Number</th>
+                            <th>Last Year's Batting Avg.</th>
+                            <th>Main Position</th>
+                            <th>Secondary Position</th>
+                            <th>Years Played</th>
                         </tr>
-                    }
-                    </tbody>*@
+                    </thead>
+                    <tbody class="searchable" id="freeAgentModalTBody"></tbody>
                 </table>
                 <div class="modal-footer">
                     <button class="btn btn-default" data-dismiss="modal">Cancel</button>
@@ -48,6 +29,4 @@
         </div>
     </div>
 </div>
-
-
 
