--- a/BaseballLeague/BaseballLeague.MVC/Views/Team/PlayersOnTeam.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Team/PlayersOnTeam.cshtml
@@ -21,89 +21,16 @@
         </tr>
         </thead>
         <tbody id="teamRoster">
-        @foreach (var p in Model.Players)
-        {
-            <tr>
-                <td>@(Model.Players.IndexOf(p) + 1)</td>
-                <td>@p.Name</td>
-                <td>@p.JerseyNumber</td>
-                <td>@p.LastYearBA</td>
-                <td>@p.PrimaryPosition</td>
-                <td>@p.SecondaryPosition</td>
-                <td>@p.YearsPlayed</td>
-                <td><button class="btn btn-primary btn-xs btnTradePlayer" value="@p.PlayerID">Trade</button></td>
-                <td><button class="btn btn-primary btn-xs btnReleasePlayer" value="@p.PlayerID">Release</button></td>
-            </tr>
-        }
-        </tbody>
     </table>
 </div>
 
 @{ Html.RenderAction("_TradePlayerModal", "Team");}
 
 <!-- Release Player Modal-->
-<div class="modal fade" id="releasePlayerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <h4 class="modal-title" id="myModalLabel">Release Player</h4>
-            </div>
-            <div class="modal-body">
-                <div class="row">
-                    <div class="col-xs-6">
-                        <div class="form-group">
-                            <input type="hidden" id="releasePlayerID" />
-                            <label>Team Name</label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button class="btn btn-primary" id="btnRelease">Release</button>
-            </div>
-        </div>
-    </div>
-</div>`
-@*@{ Html.RenderAction("_SignFreeAgentModal", "Team", new {TeamID = @Model.TeamID, TeamName = @Model.TeamName});}*@
+@Html.Partial("_ReleasePlayerModal")
 
 <!-- Sign Free Agent Modal -->
-<div class="modal fade" id="signFreeAgentModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <h4 class="modal-title" id="myModalLabel">Sign Free Agent to @Model.TeamName</h4>
-            </div>
-            <div class="modal-body">
-                <input type="text" class="input-sm" placeholder="search" name="search-nodata" id="search-nodata" data-list=".searchable" autocomplete="on">
-                <table class="table table-striped table-hover">
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Jersey Number</th>
-                            <th>Last Year's Batting Avg.</th>
-                            <th>Main Position</th>
-                            <th>Secondary Position</th>
-                            <th>Years Played</th>
-                        </tr>
-                    </thead>
-                    <tbody class="searchable" id="freeAgentModalTBody">
-                    
-                    </tbody>
-                </table>
-                <div class="modal-footer">
-                    <button class="btn btn-default" data-dismiss="modal">Cancel</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+@Html.Partial("_SignFreeAgentModal")
 
 @section Scripts{
     <script type="text/javascript" src="~/Scripts/app/viewRoster.js"></script>
