--- a/BaseballLeague/BaseballLeague.MVC/Views/Shared/_AddTeamModal.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Shared/_AddTeamModal.cshtml
@@ -1,7 +1,4 @@
-﻿@model IEnumerable<BaseballLeague.Models.League>
-
-<!-- Modal -->
-<div class="modal fade" id="addTeamModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+﻿<div class="modal fade" id="addTeamModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -16,10 +13,7 @@
                         <div class="form-group">
                             <label>League Name</label>
                             <select class="form-control col-lg-4" id="addLeagueID">
-                                @foreach (var l in Model)
-                                {
-                                    <option value=@l.LeagueID>@l.LeagueName</option>
-                                }
+
                             </select>
                         </div>
                         <div class="form-group">
