added trade player functionality as pure AJAX.

--- a/BaseballLeague/BaseballLeague.MVC/Views/Team/PlayersOnTeam.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Team/PlayersOnTeam.cshtml
@@ -24,6 +24,9 @@
     </table>
 </div>
 
+<!-- Trade Player Modal -->
+@Html.Partial("_TradePlayerModal")
+
 <!-- Release Player Modal-->
 @Html.Partial("_ReleasePlayerModal")
 
