--- a/BaseballLeague/BaseballLeague.MVC/Views/Shared/_TradePlayerModal.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Shared/_TradePlayerModal.cshtml
@@ -1,6 +1,4 @@
-﻿@model BaseballLeague.MVC.Models.TradePlayerViewModel
-
-<div class="modal fade" id="tradePlayerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+﻿<div class="modal fade" id="tradePlayerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -15,13 +13,9 @@
                     <div class="col-xs-6">
                         <div class="form-group">
                             <input type="hidden" id="tradePlayerID"/>
-                            <input type="hidden" id="currentTeamIDModal" />
                             <label>Team Name</label>
                             <select class="form-control col-lg-4" id="tradeTeamID">
-                                @foreach (var m in Model.Teams)
-                                {
-                                    <option value=@m.TeamID>@m.TeamName</option>
-                                }
+
                             </select>
                         </div>
                     </div>
