Added image to home page

--- a/BaseballLeague/BaseballLeague.MVC/Views/Home/Index.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Home/Index.cshtml
@@ -3,5 +3,6 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Baseball League</h2>
+<h2>!Null Baseball League</h2>
+<img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcT0GpYRQbANO5B6dQqtE9ZNha5rEIavqHdU3KXPyWcdJnh9qiTWIg" width="50%" />
 
