--- a/BaseballLeague/BaseballLeague.MVC/Views/Shared/_ReleasePlayerModal.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Shared/_ReleasePlayerModal.cshtml
@@ -12,7 +12,7 @@
                     <div class="col-xs-6">
                         <div class="form-group">
                             <input type="hidden" id="releasePlayerID" />
-                            <label>Team Name</label>
+                            <h5 id="playerNameRelease"></h5>
                         </div>
                     </div>
                 </div>
