added some functionality to player view. Now pulling from an ajax call. deleteplayer.js was deprecated.

--- a/BaseballLeague/BaseballLeague.MVC/Views/Player/Index.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Player/Index.cshtml
@@ -39,7 +39,7 @@
     </tr>
     </thead>
     <tbody class="searchable" id="inputPlayers">
-    @{ int playerCount = 1; }
+    @*@{ int playerCount = 1; }
     @foreach (var player in Model.Players)
     {
         <tr value="@player.PlayerID" class="@player.TeamID">
@@ -55,7 +55,7 @@
 
             @{ playerCount++; }
         </tr>
-    }
+    }*@
     </tbody>
 </table>
 
@@ -63,5 +63,5 @@
 {
     <script src="~/Scripts/app/addPlayer.js"></script>
     <script src="~/Scripts/app/filterPlayersByTeamDropdown.js"></script>
-    <script src="~/Scripts/app/deletePlayer.js"></script>
+    @*<script src="~/Scripts/app/deletePlayer.js"></script>*@
 }
