added 2nd document ready call, allows delete player modal to show. Needs data and a delete functionality.

--- a/BaseballLeague/BaseballLeague.MVC/Views/Player/Index.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Player/Index.cshtml
@@ -61,7 +61,6 @@
 
 @section Scripts
 {
-    <script src="~/Scripts/app/addPlayer.js"></script>
+    <script src="~/Scripts/app/viewManagePlayer.js"></script>
     <script src="~/Scripts/app/filterPlayersByTeamDropdown.js"></script>
-    @*<script src="~/Scripts/app/deletePlayer.js"></script>*@
 }
