--- a/BaseballLeague/BaseballLeague.MVC/Views/Shared/_AddPlayerModal.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Shared/_AddPlayerModal.cshtml
@@ -39,11 +39,11 @@
                         </div>
                         <div class="form-group">
                             <label>Previous Year's Batting Average</label>
-                            <input type="text" id="addPlayerLastYearBA" class="form-control"/>
+                            <input type="number" min="0" max="1" step="any" id="addPlayerLastYearBA" class="form-control"/>
                         </div>
                         <div class="form-group">
                             <label>Years Played</label>
-                            <input type="text" id="addPlayerYearsPlayed" class="form-control"/>
+                            <input type="number" min="0" step="1" id="addPlayerYearsPlayed" class="form-control"/>
                         </div>
                         <div class="form-group">
                             <label>Primary Position</label>
