added new styling

--- a/BaseballLeague/BaseballLeague.MVC/Views/Home/Index.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 }
 
 <h2>!Null Baseball League</h2>
-<img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcT0GpYRQbANO5B6dQqtE9ZNha5rEIavqHdU3KXPyWcdJnh9qiTWIg" width="50%" />
+<img style="opacity:0.7" src="http://www.youthsportfoto.com/wp-content/uploads/2015/09/baseball-stadium-sports-wallpaper.jpg" width="100%" />
 
