--- a/BaseballLeague/BaseballLeague.MVC/Views/Team/Index.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Team/Index.cshtml
@@ -5,10 +5,10 @@
 
 <h3>Teams</h3>
 
-<button class="btn btn-primary" id="btnShowAddTeam">Add Team</button>
+<button class="btn btn-success" id="btnShowAddTeam">Add Team</button>
 
 <div>
-    <select class="form-control col-lg-offset-9 col-lg-4" id="selectLeague">
+    <select class="form-control col-xs-offset-9 col-xs-4" id="selectLeague">
         <option value="All">All</option>
     </select>
 </div>
