--- a/BaseballLeague/BaseballLeague.MVC/Views/Team/PlayersOnTeam.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Team/PlayersOnTeam.cshtml
@@ -5,24 +5,27 @@
 
 <h2>@Model.TeamName's Roster</h2>
 
-<button class="btn btn-primary col-lg-offset-10" id="btnShowSignFreeAgent">Sign Free Agent</button>
+<button class="btn btn-success" id="btnShowSignFreeAgent">Sign Free Agent</button>
 <input type="hidden" value=@Model.TeamID id="currentTeamID"/>
-<div class="container">
-    <table class="table" id="table">
-        <thead>
-        <tr>
-            <th>#</th>
-            <th>Name</th>
-            <th>Jersey Number</th>
-            <th>Last Year's Batting Avg.</th>
-            <th>Main Position</th>
-            <th>Secondary Position</th>
-            <th>Years Played</th>
-        </tr>
-        </thead>
-        <tbody id="teamRoster">
-    </table>
-</div>
+
+<br/>
+<br/>
+
+<table class="table table-striped table-hover" id="table">
+    <thead>
+    <tr>
+        <th>#</th>
+        <th>Name</th>
+        <th>Jersey Number</th>
+        <th>Last Year's Batting Avg.</th>
+        <th>Main Position</th>
+        <th>Secondary Position</th>
+        <th>Years Played</th>
+    </tr>
+    </thead>
+    <tbody id="teamRoster">
+</table>
+
 
 <!-- Trade Player Modal -->
 @Html.Partial("_TradePlayerModal")
