Resolved issue with delete player and fixed up styling

--- a/BaseballLeague/BaseballLeague.MVC/Views/Player/Index.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Player/Index.cshtml
@@ -6,6 +6,8 @@
 
 <h2>Players</h2>
 
+<button class="btn btn-success" id="btnShowAddPlayer">Add Player</button>
+
 <div class="form-group">
     <div class="col-lg-2">
         @{ Html.RenderAction("_AddPlayerModal", "Player"); }
