--- a/BaseballLeague/BaseballLeague.MVC/Views/Shared/_TradePlayerModal.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Shared/_TradePlayerModal.cshtml
@@ -10,14 +10,15 @@
             <div class="modal-body">
                 <h5 id ="playerName1"></h5>
                 <div class="row">
-                    <div class="col-xs-6">
-                        <div class="form-group">
+                    <div class="col-xs-12">
+                        
+                        @*<div class="form-group">*@
                             <input type="hidden" id="tradePlayerID"/>
-                            <label>Team Name</label>
-                            <select class="form-control col-lg-4" id="tradeTeamID">
+                            <label for="tradeTeamID" class="col-lg-2 control-label">Team Name</label>
+                            <select class="form-control col-lg-10" id="tradeTeamID">
 
                             </select>
-                        </div>
+                        @*</div>*@
                     </div>
                 </div>
             </div>
