--- a/BaseballLeague/BaseballLeague.MVC/Views/Shared/_AddTeamModal.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Shared/_AddTeamModal.cshtml
@@ -18,18 +18,18 @@
                         </div>
                         <div class="form-group">
                             <label>Team Name</label>
-                            <input type="text" id="addTeamName" class="form-control" />
+                            <input type="text" id="addTeamName" class="form-control addTeamForm" />
                         </div>
                         <div class="form-group">
                             <label>Manager Name</label>
-                            <input type="text" id="addManagerName" class="form-control" />
+                            <input type="text" id="addManagerName" class="form-control addTeamForm" />
                         </div>
                     </div>
                 </div>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button class="btn btn-primary" id="btnSaveTeam">Save</button>
+                <button class="btn btn-success" id="btnSaveTeam">Save</button>
             </div>
         </div>
     </div>
