--- a/BaseballLeague/BaseballLeague.MVC/Views/Shared/_DeletePlayerModal.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Shared/_DeletePlayerModal.cshtml
@@ -12,12 +12,14 @@
             </div>
             <div class="modal-body">
                 <div class="row">
-                    <div class="col-xs-6">
-                        <h2>Are you sure you want to delete this player?</h2>
-                        <p>
-                            
-                        </p>
-                    </div>
+                    <div class="col-xs-12">
+                        <div class="form-group">
+                            <h5 id="DeletePlayerMessage"></h5>
+
+                            <input type="hidden" id="DeletePlayerID"/>
+
+                        </div>
+                        </div>
                 </div>
             </div>
             <div class="modal-footer">
