--- a/BaseballLeague/BaseballLeague.MVC/Views/Shared/_ReleasePlayerModal.cshtml
+++ b/BaseballLeague/BaseballLeague.MVC/Views/Shared/_ReleasePlayerModal.cshtml
@@ -9,7 +9,7 @@
             </div>
             <div class="modal-body">
                 <div class="row">
-                    <div class="col-xs-6">
+                    <div class="col-xs-12">
                         <div class="form-group">
                             <input type="hidden" id="releasePlayerID" />
                             <h5 id="playerNameRelease"></h5>
@@ -19,7 +19,7 @@
             </div>
             <div class="modal-footer">
                 <button class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button class="btn btn-primary" id="btnRelease">Release</button>
+                <button class="btn btn-danger" id="btnRelease">Release</button>
             </div>
         </div>
     </div>
